--- a/.env
+++ b/.env
@@ -36,6 +36,7 @@ VITE_SITE_START = "2023-9-30"
 # ICP 备案号
 ## 若不需要，请设为空即可
 VITE_SITE_ICP = "豫ICP备2023024848号"
+VITE_SITE_GAICP = "豫公网安备41112102000178号"
 
 # 歌曲 API 地址
 ## 请参照 https://github.com/xizeyoupan/Meting-API#deno-deploy 进行 API 服务部署
